# contextual_learning

./: CHANGELOG.md  CLAUDE.md  EXPERIMENT_PLAN.md  monitor_experiments.sh
dspy_gepa/: PROGRESS_NOTES.md  README.md  best_prompt_run8.txt  eval_batch.sh  eval_prompt_standalone.py  eval_standalone_results.json  merge_lora_weights.py  pyproject.toml  resume_gepa_run8_inner.sh  run_eval_comparison.sh  run_eval_on_node.sh  run_eval_v2.sh  run_gepa_opus_v7.sh  run_gepa_run8.sh  run_gepa_run8_inner.sh  sokoban_gepa.py  start_vllm_server.sh  teacher_prompt.txt  teacher_prompt_long.txt
examples/alphabet_sort/: rl.toml
experiments/context_distill/: ARGS.md  CLAUDE.md  EXPERIMENT_LOG.md  README.md  baseline.toml  baseline_olmo.toml  forward_kl.toml  forward_kl_seed2.toml  generate_gepa_overlay.py  rl.toml  rl_equal_weights.toml  rl_equal_weights_16k.toml  rl_gepa_loop.toml  rl_gepa_loop_olmo.toml  rl_gepa_loop_olmo_tau01.toml  rl_gepa_loop_s42.toml  rl_gepa_loop_s43.toml  rl_low_entropy.toml  rl_low_entropy_16k.toml  rl_task0.0_kl1.0.toml  rl_task0.0_kl1.0_s42.toml  rl_task0.0_kl1.0_s43.toml  rl_task1.0_kl0.0.toml  rl_task1.0_kl0.001.toml  rl_task1.0_kl0.001_s42.toml  rl_task1.0_kl0.001_s43.toml  rl_task1.0_kl0.01.toml  rl_task1.0_kl0.01_s42.toml  rl_task1.0_kl0.01_s43.toml  rl_task1.0_kl0.0_r32_s42.toml  rl_task1.0_kl0.0_r32_s43.toml  rl_task1.0_kl0.0_s42.toml  rl_task1.0_kl0.0_s43.toml  rl_task_only_s42.toml  rl_task_only_s43.toml  run_gepa_loop.sh  run_gepa_loop_parallel.sh  run_kl_sweep.sh
experiments/rsa_distill/: inference.toml  inference_singlenode.toml  rl_phase1.toml  (+4 more)
(+34 files in other folders)
